# skylinepilot-mcp

./: .gitignore  AGENTS.md  BUGFIXES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FINAL_AUDIT_REPORT.md  LICENSE  PROJECT_CHECKLIST.md  README.md  ROADMAP.md  SUPPORT.md  VERIFICATION_REPORT.md  account_manager.py  dashboard.py  docker-compose.yml  health_monitor.py  log_manager.py  main.py  marketing_engine.py  proxy_manager.py  pyproject.toml  pytest.ini  requirements.txt  scheduler.py  stats_tracker.py  template_manager.py  test_marketing_engine.py
console_ui/: dashboard.html
growth_docs/: BRAND_STYLE_GUIDE.md  DOCS_INDEX.md  DOCS_SEARCH_QUALITY_AUDIT.md  EXECUTION_PROGRESS.md  GITHUB_TOPICS.md  MARKETING_GROWTH_PLAYBOOK.md  PHONE_LOGIN_TEST.md  PROJECT_REBUILD_BLUEPRINT.md  SEO_OPTIMIZATION_SUMMARY.md  SOCIAL_MEDIA_TEMPLATE.md  TEST_BASELINE.md  TOOLS.md
src/skylinepilot/: __init__.py  settings.py
src/skylinepilot/core/: __init__.py
src/skylinepilot/core/accounts/: __init__.py  service.py
src/skylinepilot/core/marketing/: __init__.py  service.py
src/skylinepilot/core/templates/: __init__.py  service.py
src/skylinepilot/interfaces/: __init__.py
src/skylinepilot/interfaces/mcp/: __init__.py  server.py
src/skylinepilot/interfaces/web_api/: __init__.py  dashboard_app.py  response.py
static/: dashboard.html
tests/: conftest.py
tests/integration/: test_dashboard_route_mounts.py
tests/unit/: test_marketing_engine_unit.py  test_mcp_domain_formatters.py  test_mcp_ops.py  test_mcp_services.py  test_web_api_response.py
(+18 files in other folders)
