[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skylinepilot-mcp"
version = "1.0.0"
description = "SkylinePilot MCP - Telegram automation console for growth, operations and campaign execution"
authors = [{name = "User"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.8.0",
    "telethon>=1.39.0",
    "python-dotenv>=1.1.0",
    "flask>=3.0.0",
    "playwright>=1.40.0",
    "aiohttp>=3.9.0",
    "nest-asyncio>=1.6.0",
    "croniter>=6.0.0",
]

[project.scripts]
telegram-mcp = "main:main"
skylinepilot = "main:main"

[tool.setuptools]
py-modules = ["main", "web_login", "session_manager"]

[tool.black]
line-length = 99
target-version = ['py311']
